--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,10 @@
     "    pd_format = True\n",
     "    if \"data-files\" not in args.inoculation_data_path:\n",
     "        # here, we download from the huggingface server probably!\n",
-    "        dataset = load_dataset(args.inoculation_data_path, cache_dir=args.cache_dir) # make sure cache dir is self-contained!\n",
+    "        if args.inoculation_data_path == \"en_ewt\":\n",
+    "            dataset = load_dataset(\"universal_dependencies\", args.inoculation_data_path, cache_dir=args.cache_dir) # make sure cache dir is self-contained!\n",
+    "        else:\n",
+    "            dataset = load_dataset(args.inoculation_data_path, cache_dir=args.cache_dir) # make sure cache dir is self-contained!\n",
     "        inoculation_train_df = dataset[\"train\"]\n",
     "        eval_df = dataset[\"validation\"]\n",
     "    else:  \n",
@@ -571,6 +574,13 @@
     "        # trainer.log_metrics(\"eval\", metrics)\n",
     "        # trainer.save_metrics(\"eval\", metrics)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
