--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,12 +354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# task setups\n",
-    "task_name = \"en_ewt\"\n",
+    "task_name = \"conll2003\"\n",
     "# random seeds\n",
     "# WARNING: this may change your results as well. Try it a few different seeds.\n",
     "seed = 42\n",
@@ -379,18 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0596dd1e88c4446795c1d6fc4d471ba3",
+       "model_id": "37ad5562164f4430acdd43a5c77829ab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=22716.0, style=ProgressStyle(descriptio…"
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=2603.0, style=ProgressStyle(description…"
       ]
      },
      "metadata": {},
@@ -406,12 +406,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c47b72d3b2044597a0dc88cca26d7b04",
+       "model_id": "8bc20b4032ee4403bb773c62688f83d2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=59485.0, style=ProgressStyle(descriptio…"
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=1781.0, style=ProgressStyle(description…"
       ]
      },
      "metadata": {},
@@ -422,70 +422,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Downloading and preparing dataset universal_dependencies/en_ewt (download: 16.11 MiB, generated: 27.09 MiB, post-processed: Unknown size, total: 43.20 MiB) to ../tmp/universal_dependencies/en_ewt/2.7.0/1b298bc956ef19f298a0e2970bf4f9696fd258cb2a749b30af709abfa09f2983...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "757f1f7895934393a345ffbb0b5439cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=2508721.0, style=ProgressStyle(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93a5e62436844d60894c2714fa8eadd9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=320636.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fc8cd1dea9b47ba9b9145247a1a1532",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=318389.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Downloading and preparing dataset conll2003/conll2003 (download: 4.63 MiB, generated: 9.78 MiB, post-processed: Unknown size, total: 14.41 MiB) to ../tmp/conll2003/conll2003/1.0.0/40e7cb6bcc374f7c349c83acd1e9352a4f09474eb691f64f364ee62eb65d0ca6...\n"
      ]
     },
     {
@@ -534,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset universal_dependencies downloaded and prepared to ../tmp/universal_dependencies/en_ewt/2.7.0/1b298bc956ef19f298a0e2970bf4f9696fd258cb2a749b30af709abfa09f2983. Subsequent calls will reuse this data.\n"
+      "Dataset conll2003 downloaded and prepared to ../tmp/conll2003/conll2003/1.0.0/40e7cb6bcc374f7c349c83acd1e9352a4f09474eb691f64f364ee62eb65d0ca6. Subsequent calls will reuse this data.\n"
      ]
     }
    ],
@@ -568,39 +505,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['NOUN',\n",
-       " 'PUNCT',\n",
-       " 'ADP',\n",
-       " 'NUM',\n",
-       " 'SYM',\n",
-       " 'SCONJ',\n",
-       " 'ADJ',\n",
-       " 'PART',\n",
-       " 'DET',\n",
-       " 'CCONJ',\n",
-       " 'PROPN',\n",
-       " 'PRON',\n",
-       " 'X',\n",
-       " '_',\n",
-       " 'ADV',\n",
-       " 'INTJ',\n",
-       " 'VERB',\n",
-       " 'AUX']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**** Dataset Statistics ****\n",
+      "training example = 14041\n",
+      "validation example = 3250\n",
+      "testing example = 3453\n",
+      "****************************\n"
+     ]
     }
    ],
    "source": [
-    "train_df.features[\"upos\"].feature.names"
+    "print(\"**** Dataset Statistics ****\")\n",
+    "print(f\"training example = {len(train_df)}\")\n",
+    "print(f\"validation example = {len(eval_df)}\")\n",
+    "print(f\"testing example = {len(test_df)}\")\n",
+    "print(\"****************************\")"
    ]
   },
   {
