update conll df

--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -326,7 +326,7 @@
     "    if not os.path.exists(os.environ[\"TRANSFORMERS_CACHE\"]): \n",
     "        os.makedirs(os.environ[\"TRANSFORMERS_CACHE\"])\n",
     "    TASK_CONFIG = {\n",
-    "        \"conll2003\" : (\"words\", None),\n",
+    "        \"conll2003\" : (\"tokens\", None),\n",
     "        \"en_ewt\" : (\"tokens\", None)\n",
     "    }\n",
     "    # we need some prehandling here for token classifications!\n",
