fix abstract scrambling

--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,19 +204,28 @@
     "    for k,v in token_frequency_map.items():\n",
     "        vocab_list.append(k)\n",
     "    random.shuffle(vocab_list)\n",
+    "    \n",
     "    abstract_matches = []\n",
-    "    for i in range(0, 4):\n",
+    "    abstract_len = 4\n",
+    "    for i in range(0, abstract_len):\n",
     "        az_list = []\n",
     "        for j in range(ord('a'), ord('z')+1):\n",
     "            az_list.append(chr(j))\n",
     "        abstract_matches.append(az_list)\n",
     "    from itertools import product\n",
     "    abstract_matches = product(*abstract_matches)\n",
-    "    abstract_english_pool = []\n",
+    "    good_abstract = []\n",
     "    for match in abstract_matches:\n",
-    "        abstract_english_pool.append(\"\".join(match))\n",
+    "        abstract = \"\".join(match)\n",
+    "        if len(modified_tokenizer.tokenize(abstract)[0][0]) == abstract_len:\n",
+    "            good_abstract.append(abstract)\n",
+    "            if len(good_abstract) != 0 and len(good_abstract) % 10000 == 0:\n",
+    "                print(f\"generating abstract token in progress: {len(good_abstract)}\")\n",
+    "    \n",
+    "    assert len(good_abstract) >= len(vocab_list)\n",
+    "    \n",
     "    for i in range(0, len(vocab_list)):\n",
-    "        vocab_match[vocab_list[i]] = abstract_english_pool[i]\n",
+    "        vocab_match[vocab_list[i]] = good_abstract[i]\n",
     "    return vocab_match\n",
     "\n",
     "def generate_vocab_match_no_frequency_oov(wiki_token_frequency_map, \n",
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,12 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# task setups\n",
-    "task_name = \"en_ewt\"\n",
+    "task_name = \"snli\"\n",
     "# random seeds\n",
     "# WARNING: this may change your results as well. Try it a few different seeds.\n",
     "seed = 42\n",
@@ -379,17 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Reusing dataset universal_dependencies (../tmp/universal_dependencies/en_ewt/2.7.0/1b298bc956ef19f298a0e2970bf4f9696fd258cb2a749b30af709abfa09f2983)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_name == \"conll2003\":\n",
     "    dataset = load_dataset(\"conll2003\", cache_dir=cache_dir)\n",
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -428,9 +429,9 @@
      "output_type": "stream",
      "text": [
       "**** Dataset Statistics ****\n",
-      "training example = 12543\n",
-      "validation example = 2002\n",
-      "testing example = 2077\n",
+      "training example = 550152\n",
+      "validation example = 10000\n",
+      "testing example = 10000\n",
       "****************************\n"
      ]
     }
@@ -445,162 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'deprel': ['punct',\n",
-       "  'det',\n",
-       "  'nsubj',\n",
-       "  'case',\n",
-       "  'det',\n",
-       "  'amod',\n",
-       "  'nmod',\n",
-       "  'aux',\n",
-       "  'aux',\n",
-       "  'root',\n",
-       "  'iobj',\n",
-       "  'obj',\n",
-       "  'case',\n",
-       "  'obl',\n",
-       "  'mark',\n",
-       "  'acl',\n",
-       "  'punct',\n",
-       "  'punct'],\n",
-       " 'deps': [\"[('punct', 10)]\",\n",
-       "  \"[('det', 3)]\",\n",
-       "  \"[('nsubj', 10)]\",\n",
-       "  \"[('case', 7)]\",\n",
-       "  \"[('det', 7)]\",\n",
-       "  \"[('amod', 7)]\",\n",
-       "  \"[('nmod:of', 3)]\",\n",
-       "  \"[('aux', 10)]\",\n",
-       "  \"[('aux', 10)]\",\n",
-       "  \"[('root', 0)]\",\n",
-       "  \"[('iobj', 10)]\",\n",
-       "  \"[('obj', 10)]\",\n",
-       "  \"[('case', 14)]\",\n",
-       "  \"[('obl:for', 10)]\",\n",
-       "  \"[('mark', 16)]\",\n",
-       "  \"[('acl:to', 14)]\",\n",
-       "  \"[('punct', 10)]\",\n",
-       "  \"[('punct', 10)]\"],\n",
-       " 'feats': ['None',\n",
-       "  \"{'Number': 'Sing', 'PronType': 'Dem'}\",\n",
-       "  \"{'Number': 'Sing'}\",\n",
-       "  'None',\n",
-       "  \"{'Definite': 'Ind', 'PronType': 'Art'}\",\n",
-       "  \"{'Degree': 'Pos'}\",\n",
-       "  \"{'Number': 'Sing'}\",\n",
-       "  \"{'VerbForm': 'Fin'}\",\n",
-       "  \"{'VerbForm': 'Inf'}\",\n",
-       "  \"{'VerbForm': 'Ger'}\",\n",
-       "  \"{'Case': 'Acc', 'Number': 'Plur', 'Person': '1', 'PronType': 'Prs'}\",\n",
-       "  \"{'Number': 'Sing'}\",\n",
-       "  'None',\n",
-       "  \"{'Number': 'Plur'}\",\n",
-       "  'None',\n",
-       "  \"{'VerbForm': 'Inf'}\",\n",
-       "  'None',\n",
-       "  'None'],\n",
-       " 'head': ['10',\n",
-       "  '3',\n",
-       "  '10',\n",
-       "  '7',\n",
-       "  '7',\n",
-       "  '7',\n",
-       "  '3',\n",
-       "  '10',\n",
-       "  '10',\n",
-       "  '0',\n",
-       "  '10',\n",
-       "  '10',\n",
-       "  '14',\n",
-       "  '10',\n",
-       "  '16',\n",
-       "  '14',\n",
-       "  '10',\n",
-       "  '10'],\n",
-       " 'idx': 'weblog-juancole.com_juancole_20051126063000_ENG_20051126_063000-0002',\n",
-       " 'lemmas': ['[',\n",
-       "  'this',\n",
-       "  'killing',\n",
-       "  'of',\n",
-       "  'a',\n",
-       "  'respected',\n",
-       "  'cleric',\n",
-       "  'will',\n",
-       "  'be',\n",
-       "  'cause',\n",
-       "  'we',\n",
-       "  'trouble',\n",
-       "  'for',\n",
-       "  'year',\n",
-       "  'to',\n",
-       "  'come',\n",
-       "  '.',\n",
-       "  ']'],\n",
-       " 'misc': [\"{'SpaceAfter': 'No'}\",\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  'None',\n",
-       "  \"{'SpaceAfter': 'No'}\",\n",
-       "  \"{'SpaceAfter': 'No'}\",\n",
-       "  'None'],\n",
-       " 'text': '[This killing of a respected cleric will be causing us trouble for years to come.]',\n",
-       " 'tokens': ['[',\n",
-       "  'This',\n",
-       "  'killing',\n",
-       "  'of',\n",
-       "  'a',\n",
-       "  'respected',\n",
-       "  'cleric',\n",
-       "  'will',\n",
-       "  'be',\n",
-       "  'causing',\n",
-       "  'us',\n",
-       "  'trouble',\n",
-       "  'for',\n",
-       "  'years',\n",
-       "  'to',\n",
-       "  'come',\n",
-       "  '.',\n",
-       "  ']'],\n",
-       " 'upos': [1, 8, 0, 2, 8, 6, 0, 17, 17, 16, 11, 0, 2, 0, 7, 16, 1, 1],\n",
-       " 'xpos': ['-LRB-',\n",
-       "  'DT',\n",
-       "  'NN',\n",
-       "  'IN',\n",
-       "  'DT',\n",
-       "  'JJ',\n",
-       "  'NN',\n",
-       "  'MD',\n",
-       "  'VB',\n",
-       "  'VBG',\n",
-       "  'PRP',\n",
-       "  'NN',\n",
-       "  'IN',\n",
-       "  'NNS',\n",
-       "  'TO',\n",
-       "  'VB',\n",
-       "  '.',\n",
-       "  '-RRB-']}"
+       "{'premise': 'People waiting for a parade to start on main street.',\n",
+       " 'hypothesis': 'The people are shopping.',\n",
+       " 'label': 2}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,18 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b55526730f242d38670c073973aea4d",
+       "model_id": "7b9c41f5d7ce4a54a660c02fb8a6527d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=12543.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=550152.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -638,12 +495,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd338aa0285b496cb873c028c93453a2",
+       "model_id": "6745898fd86b40a5b8137132dfecd2d1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2002.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -659,12 +516,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ad955a7087f463b8164ffa74e6e3238",
+       "model_id": "4916d1d9964a4d4d82d8b13c9eee2582",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2077.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1018,9 +875,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generating abstract token in progress: 10000\n",
+      "generating abstract token in progress: 20000\n",
+      "generating abstract token in progress: 30000\n",
+      "generating abstract token in progress: 40000\n"
+     ]
+    }
+   ],
    "source": [
     "# mismatch script\n",
     "vocab_match_abstract = \\\n",
@@ -1029,18 +897,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd5c0683893f44a19f3e8bcb3e65c97d",
+       "model_id": "99784e8149864da3924d275b9a9a47e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=12543.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1056,12 +924,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "171eb2e349474cf7a3f1be924b9eac94",
+       "model_id": "ae49a2fd94e14d07b63e222ece06df30",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2002.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1077,12 +945,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c67211703ae489791f8f45cf0d12fc5",
+       "model_id": "8cbaf7ea9b0c446ba4dcb4f1585f23e5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2077.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1115,6 +983,26 @@
     "                                  \"validation\":corrupted_validation_dataset, \n",
     "                                  \"test\":corrupted_test_dataset})\n",
     "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-abstract\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dvvm jkqm jtkf dwxe'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrupt_translator(\"this movie is great\", modified_basic_tokenizer, vocab_match_abstract)"
    ]
   },
   {
